# platformer

./: Cargo.toml
assets/: credit.txt
src/: camera.rs  lib.rs  main.rs  map.rs  player.rs
